fix header alignment. add cursor pointer to cards

--- a/src/components/CountryCard/CountryCard.scss
+++ b/src/components/CountryCard/CountryCard.scss
@@ -5,6 +5,7 @@
   background-color: var(--white);
   border-radius: 5px;
   overflow: hidden;
+  cursor: pointer;
 
   @include breakpoint(sm) {
     margin-bottom: 0;
