--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,7 +19,7 @@
 
   &__container {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
     max-width: 1440px;
